src/test/ui/issues/issue-2XXXX/issue-24446.stderr
error[E0277]: the size for values of type `(dyn Fn() -> u32 + 'static)` cannot be known at compilation time
  --> $DIR/issue-24446.rs:2:17
   |
LL |     static foo: dyn Fn() -> u32 = || -> u32 {
   |                 ^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn Fn() -> u32 + 'static)`

error[E0277]: `(dyn Fn() -> u32 + 'static)` cannot be shared between threads safely
  --> $DIR/issue-24446.rs:2:17
   |
LL |     static foo: dyn Fn() -> u32 = || -> u32 {
   |                 ^^^^^^^^^^^^^^^ `(dyn Fn() -> u32 + 'static)` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `(dyn Fn() -> u32 + 'static)`
   = note: shared static variables must have a type that implements `Sync`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
